Legg til API og data typer

--- a/src/components/banner/Banner.module.less
+++ b/src/components/banner/Banner.module.less
@@ -1,6 +1,6 @@
 @import '../../../node_modules/nav-frontend-core/less/_variabler';
 
-.bs-banner {
+.banner {
   display: flex;
   align-items: center;
   justify-content: center;
