--- a/src/App.module.less
+++ b/src/App.module.less
@@ -1,43 +1,56 @@
-@import "~nav-frontend-core/less/core";
-@import "~nav-frontend-typografi-style/src/index";
+@import '~nav-frontend-core/less/core';
+@import '~nav-frontend-typografi-style/src/index';
 
 :global {
-  html, body {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    background-color: @white;
-    .typo-normal-mixin();
-  }
+    html,
+    body {
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+        background-color: @white;
+        .typo-normal-mixin();
+    }
+
+    ul {
+        margin: 0;
+    }
 }
 
 .app {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-bottom: 3rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 3rem;
 }
 
 .container {
-  margin: 1.5rem 0 2rem 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  max-width: 400px;
-  width: 100%;
-  padding: 0 0.5rem 0 0.5rem;
+    margin: 1.5rem 0 2rem 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 400px;
+    width: 100%;
+    padding: 0 0.5rem 0 0.5rem;
+}
+
+.w100 {
+    width: 100%;
 }
 
 .row {
-  margin-bottom: 1rem;
-  width: 100%;
+    margin-bottom: 1rem;
+    width: 100%;
 }
 
-.sendKnapp{
-  margin-top: 2rem;
+.rowExtraMargin {
+    margin-bottom: 3rem;
+    width: 100%;
+}
+.sendKnapp {
+    margin-top: 2rem;
 }
 
-.avbrytKnapp{
-  margin-top: 2rem;
+.avbrytKnapp {
+    margin-top: 2rem;
 }
