Mer space på tidligere situasjon

--- a/src/App.module.less
+++ b/src/App.module.less
@@ -43,6 +43,11 @@
     width: 100%;
 }
 
+.tidligereRow {
+    margin-bottom: 3rem;
+    width: 100%;
+}
+
 .rowExtraMargin {
     margin-bottom: 3rem;
     width: 100%;
