--- a/src/App.module.less
+++ b/src/App.module.less
@@ -59,3 +59,10 @@
 .avbrytKnapp {
     margin-top: 2rem;
 }
+
+.alert {
+    display: flex;
+    justify-content: center;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
